Style du header et animation au click

--- a/scss/base/_color.scss
+++ b/scss/base/_color.scss
@@ -15,8 +15,9 @@ $dark-red: #a65447;
 $dark-peach: #d96e5d;
 
 //======= GREY
+$more-dark-grey: #465763;
 $dark-grey: #455763;
 $charcoal-grey: #34414a;
 $grey: #d2d2d2;
-$dark-grey: #b8b8b8;
+$dark-greyy: #b8b8b8;
 $light-greywhite-two: #ebebeb;
