--- a/public/asset/css/main.css
+++ b/public/asset/css/main.css
@@ -3,22 +3,130 @@
   display: table;
   clear: both; }
 
+ul {
+  list-style: none;
+  padding: 0; }
+
+a {
+  text-decoration: none; }
+
+* {
+  font-size: 16px;
+  font-family: OpenSans; }
+
+h1, h2, h3, h4, h5 {
+  font-family: Montserrat;
+  font-weight: bold; }
+
+input {
+  width: 562px;
+  height: 43.3px;
+  border: solid 2px #d96e5d;
+  background-color: #fafafa; }
+  input::-webkit-input-placeholder {
+    font-style: italic;
+    color: #465763;
+    padding-left: 22px; }
+  input:-moz-placeholder {
+    font-style: italic;
+    color: #465763;
+    padding-left: 22px; }
+  input::-moz-placeholder {
+    font-style: italic;
+    color: #465763;
+    padding-left: 22px; }
+  input:-ms-input-placeholder {
+    font-style: italic;
+    color: #465763;
+    padding-left: 22px; }
+
+button {
+  position: relative;
+  top: 4px;
+  width: 62px;
+  height: 47px;
+  border: solid 2px #d96e5d;
+  background-color: #fafafa;
+  margin-left: -6px; }
+  button .fa-search {
+    font-size: 25px;
+    color: #34414a; }
+
+.content-search-nav {
+  background-color: #a65447; }
+  .content-search-nav .search-nav-title {
+    color: #ebebeb;
+    font-size: 25px !important;
+    text-align: center !important;
+    padding-top: 30px; }
+  .content-search-nav form {
+    text-align: center !important;
+    padding-bottom: 40px; }
+    .content-search-nav form .search-more {
+      display: inline-block;
+      color: #fafafa;
+      text-decoration: underline;
+      padding-left: 30px; }
+
 .navigation .container-navigation {
   width: 100%;
   max-width: 1280px;
   margin: auto; }
   .navigation .container-navigation .container-logo {
     width: 25%;
-    float: left; }
+    float: left;
+    max-width: 260px;
+    height: 150px;
+    padding: 0 20px; }
+    .navigation .container-navigation .container-logo .archi-wiki-logo {
+      max-width: 198.9px;
+      width: 100%;
+      padding-top: 32px; }
+    .navigation .container-navigation .container-logo .legend-logo {
+      font-size: 12px;
+      color: rgba(70, 87, 99, 0.85); }
   .navigation .container-navigation .container-header-nav {
     width: 58.33333%;
-    float: left; }
+    float: left;
+    max-width: 714px;
+    height: 150px;
+    display: flex; }
+    .navigation .container-navigation .container-header-nav .header-nav {
+      margin: auto; }
+      .navigation .container-navigation .container-header-nav .header-nav .item {
+        display: inline-block;
+        padding: 0 15px; }
+        .navigation .container-navigation .container-header-nav .header-nav .item a {
+          color: #34414a;
+          text-transform: uppercase;
+          font-size: 18px; }
   .navigation .container-navigation .search-nav {
     width: 8.33333%;
-    float: left; }
+    float: left;
+    width: 133px;
+    height: 150px;
+    display: flex; }
+    .navigation .container-navigation .search-nav .fa-search {
+      margin: auto;
+      font-size: 34px; }
+    .navigation .container-navigation .search-nav.active {
+      background-color: #a65447; }
+      .navigation .container-navigation .search-nav.active .fa-search {
+        color: #fafafa; }
   .navigation .container-navigation .more-menu {
     width: 8.33333%;
-    float: left; }
+    float: left;
+    width: 133px;
+    height: 150px;
+    display: flex; }
+    .navigation .container-navigation .more-menu p {
+      margin: auto;
+      font-size: 18px;
+      text-transform: uppercase; }
+    .navigation .container-navigation .more-menu.active {
+      background-color: #455763; }
+      .navigation .container-navigation .more-menu.active p {
+        color: #fafafa; }
 
 .navigation .content-search-nav {
   width: 100%;
@@ -26,7 +134,10 @@
   text-justify: distribute-all-lines;
   font-size: 0 !important;
   max-width: 1280px;
-  margin: auto; }
+  margin: auto;
+  display: none;
+  bottom: 26px;
+  position: relative; }
   .navigation .content-search-nav > * {
     text-align: left;
     font-size: 1rem; }
@@ -34,6 +145,8 @@
     content: '';
     display: inline-block;
     width: 100%; }
+  .navigation .content-search-nav.show {
+    display: block; }
 
 .navigation .content-more-menu {
   width: 100%;
@@ -41,7 +154,12 @@
   text-justify: distribute-all-lines;
   font-size: 0 !important;
   max-width: 1280px;
-  margin: auto; }
+  margin: auto;
+  background-color: #455763;
+  color: #fafafa;
+  display: none;
+  position: relative;
+  bottom: 1px; }
   .navigation .content-more-menu > * {
     text-align: left;
     font-size: 1rem; }
@@ -49,3 +167,30 @@
     content: '';
     display: inline-block;
     width: 100%; }
+  .navigation .content-more-menu.show {
+    display: block; }
+  .navigation .content-more-menu nav:nth-child(1) {
+    width: 25%;
+    float: left;
+    padding-left: 40px; }
+  .navigation .content-more-menu nav:nth-child(2) {
+    width: 58.33333%;
+    float: left;
+    padding-left: 40px;
+    max-width: 665px; }
+  .navigation .content-more-menu .connect {
+    width: 16.66667%;
+    float: left; }
+    .navigation .content-more-menu .connect a {
+      display: block;
+      text-align: center;
+      color: #fafafa;
+      font-size: 18px;
+      padding-top: 10px; }
+  .navigation .content-more-menu h4 {
+    font-size: 20px;
+    line-height: 1.3; }
+  .navigation .content-more-menu .item a {
+    color: #fafafa;
+    font-size: 18px;
+    line-height: 1.5; }
