--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -4,23 +4,121 @@
 		margin:auto;
 		.container-logo {
 			@include span(3,false);
+			max-width: 260px;
+			height: 150px;
+			padding: 0 20px;
+			.archi-wiki-logo {
+				max-width: 198.9px;
+				width: 100%;
+				padding-top: 32px;
+			}
+			.legend-logo {
+  				font-size: 12px;
+  				color: rgba(70, 87, 99, 0.85);
+			}
 		}
 		.container-header-nav {
 			@include span(7,false);
+			max-width: 714px;
+			height: 150px;
+			display: flex;
+			.header-nav {
+				margin: auto;
+				.item {
+					display: inline-block;
+					padding: 0 15px;
+					a {
+						color: $charcoal-grey;
+						text-transform: uppercase;
+						font-size: 18px;
+					}
+				}
+			}
 		}
 		.search-nav {
 			@include span(1,false);
+			width: 133px;
+			height: 150px;
+			display: flex;
+			.fa-search{
+				margin: auto;
+				font-size: 34px;
+			}
+			&.active {
+				background-color: $dark-red;
+				.fa-search {
+					color: $white;
+				}
+			}
 		}
 		.more-menu {
 			@include span(1,false);
+			width: 133px;
+			height: 150px;
+			display: flex;
+			p {
+				margin: auto;
+				font-size: 18px;
+				text-transform: uppercase;
+			}
+			&.active {
+				background-color: $dark-grey;
+				p {
+					color: $white;
+				}
+			}
 		}
 	}
 	.content-search-nav {
 		@include col-container;
 		margin:auto;
+		display: none;
+		bottom: 26px;
+		position: relative;
+		&.show {
+			display: block;
+		}
 	}
 	.content-more-menu {
 		@include col-container;
 		margin:auto;
+		background-color: $dark-grey;
+		color: $white;
+		display: none;
+		position: relative;
+    	bottom: 1px;
+		&.show {
+			display: block;
+		}
+		nav:nth-child(1) {
+			@include span(3,false);
+			padding-left: 40px;
+		}
+		nav:nth-child(2) {
+			@include span(7,false);
+			padding-left: 40px;
+			max-width: 665px;
+		}
+		.connect {
+			@include span(2,false);
+			a {
+				display: block;
+				text-align: center;
+				color: $white;
+				font-size: 18px;
+				padding-top: 10px;
+			}
+		}
+		h4 {
+			font-size: 20px;
+			line-height: 1.3;
+		}
+		.item {
+			a {
+				color: $white;
+				font-size: 18px;
+				line-height: 1.5;
+			}
+		}
 	}
 }
