--- a/scss/components/_search-adress.scss
+++ b/scss/components/_search-adress.scss
@@ -5,6 +5,7 @@
   		font-size: 25px !important;
   		text-align: center !important;
   		padding-top: 30px;
+		margin-bottom: 10px;
 	}
 	form {
 		text-align: center !important;
