--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -112,6 +112,7 @@
 		h4 {
 			font-size: 20px;
 			line-height: 1.3;
+			color:$white;
 		}
 		.item {
 			a {
@@ -120,5 +121,8 @@
 				line-height: 1.5;
 			}
 		}
+	}
+	a {
+		text-decoration: none;
 	}
 }
