--- a/scss/main.scss
+++ b/scss/main.scss
@@ -32,5 +32,6 @@ $grid-max-width: 1280px;
 @import "components/article";
 //====================== LAYOUT
 @import "layout/header";
+@import "layout/footer";
 //====================== PAGE
 @import "page/home";
