--- a/scss/page/_home.scss
+++ b/scss/page/_home.scss
@@ -32,6 +32,8 @@
 		}
 	}
 	.top-articles {
+		display: inline-block;
+		padding-bottom: 50px;
 		.about-us {
 			@include span(5,false);
 			padding: 30px 0;
@@ -51,15 +53,19 @@
 				padding:0 30px;
 			}
 		}
-		/*.last-new-article {
-			@include span(7,false);
-			padding: 30px 0;
-			.title-last-new {
-				padding:0 30px;
-			}
-			.article-content {
-
-			}
-		}*/
+	}
+	.btn-see-more {
+		width: 100%;
+		display: inline-block;
+		margin-top: 30px;
+		margin-bottom: 60px;
+		.wrap-more-article {
+			@include span(8,false);
+			text-align: center;
+		}
+		.wrap-more-comment {
+			@include span(4,false);
+			text-align: center;
+		}
 	}
 }
