--- a/public/asset/css/main.css
+++ b/public/asset/css/main.css
@@ -4,7 +4,8 @@
   clear: both; }
 
 body {
-  background-color: #fafafa; }
+  background-color: #fafafa;
+  margin: 0; }
 
 ul {
   list-style: none;
@@ -12,7 +13,8 @@ ul {
 
 * {
   font-size: 16px;
-  font-family: OpenSans; }
+  font-family: OpenSans;
+  outline: none; }
 
 h1, h2, h3, h4, h5 {
   font-family: Montserrat;
@@ -243,136 +245,292 @@ button {
       padding-bottom: 15px;
       font-style: italic; }
 
-.navigation .container-navigation {
-  width: 100%;
-  max-width: 1280px;
-  margin: auto; }
-  .navigation .container-navigation .container-logo {
-    width: 25%;
-    float: left;
-    max-width: 260px;
-    height: 150px;
-    padding: 0 20px; }
-    .navigation .container-navigation .container-logo .archi-wiki-logo {
-      max-width: 198.9px;
-      width: 100%;
-      padding-top: 32px; }
-    .navigation .container-navigation .container-logo .legend-logo {
-      font-size: 12px;
-      color: rgba(70, 87, 99, 0.85); }
-  .navigation .container-navigation .container-header-nav {
-    width: 58.33333%;
-    float: left;
-    max-width: 714px;
-    height: 150px;
-    display: flex; }
-    .navigation .container-navigation .container-header-nav .header-nav {
-      margin: auto; }
-      .navigation .container-navigation .container-header-nav .header-nav .item {
-        display: inline-block;
-        padding: 0 15px; }
-        .navigation .container-navigation .container-header-nav .header-nav .item a {
-          color: #34414a;
-          text-transform: uppercase;
-          font-size: 18px; }
-  .navigation .container-navigation .search-nav {
-    width: 8.33333%;
-    float: left;
-    width: 133px;
-    height: 150px;
-    display: flex; }
-    .navigation .container-navigation .search-nav .fa-search {
-      margin: auto;
-      font-size: 34px; }
-    .navigation .container-navigation .search-nav.active {
-      background-color: #a65447; }
-      .navigation .container-navigation .search-nav.active .fa-search {
-        color: #fafafa; }
-  .navigation .container-navigation .more-menu {
-    width: 8.33333%;
-    float: left;
-    width: 133px;
-    height: 150px;
-    display: flex; }
-    .navigation .container-navigation .more-menu p {
-      margin: auto;
-      font-size: 18px;
-      text-transform: uppercase; }
-    .navigation .container-navigation .more-menu.active {
-      background-color: #455763; }
-      .navigation .container-navigation .more-menu.active p {
-        color: #fafafa; }
-
-.navigation .content-search-nav {
-  width: 100%;
-  text-align: justify !important;
-  text-justify: distribute-all-lines;
-  font-size: 0 !important;
-  max-width: 1280px;
-  margin: auto;
-  display: none;
-  bottom: 26px;
-  position: relative; }
-  .navigation .content-search-nav > * {
-    text-align: left;
-    font-size: 1rem; }
-  .navigation .content-search-nav:after {
-    content: '';
-    display: inline-block;
-    width: 100%; }
-  .navigation .content-search-nav.show {
-    display: block; }
-
-.navigation .content-more-menu {
-  width: 100%;
-  text-align: justify !important;
-  text-justify: distribute-all-lines;
-  font-size: 0 !important;
-  max-width: 1280px;
-  margin: auto;
-  background-color: #455763;
-  color: #fafafa;
-  display: none;
+/* BURGER MENU */
+.burger-menu {
   position: relative;
-  bottom: 1px; }
-  .navigation .content-more-menu > * {
-    text-align: left;
-    font-size: 1rem; }
-  .navigation .content-more-menu:after {
+  width: 40px;
+  height: 40px;
+  cursor: pointer;
+  margin: auto;
+  margin-bottom: 25px; }
+
+.burger {
+  position: absolute;
+  background: #455763;
+  width: 100%;
+  height: 5px;
+  top: 50%;
+  right: 0px;
+  margin-top: -5px;
+  opacity: 1; }
+
+.burger:before {
+  position: absolute;
+  background: #455763;
+  width: 40px;
+  height: 5px;
+  top: 12px;
+  content: "";
+  display: block; }
+
+.burger:after {
+  position: absolute;
+  background: #455763;
+  width: 40px;
+  height: 5px;
+  bottom: 12px;
+  content: "";
+  display: block; }
+
+.burger:after, .burger:before, .burger {
+  -moz-transition: all 0.3s ease-in-out;
+  -o-transition: all 0.3s ease-in-out;
+  -webkit-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out; }
+
+.more-menu.active .burger-menu .burger:after {
+  -moz-transform: rotate(-45deg);
+  -o-transform: rotate(-45deg);
+  -ms-transform: rotate(-45deg);
+  -webkit-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+  bottom: 0px;
+  background: white; }
+
+.more-menu.active .burger-menu .burger:before {
+  -moz-transform: rotate(45deg);
+  -o-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  -webkit-transform: rotate(45deg);
+  transform: rotate(45deg);
+  top: 0px;
+  background: white; }
+
+/* ANIME MENU */
+.navigation .content-more-menu.show {
+  -moz-transform: translateX(0);
+  -o-transform: translateX(0);
+  -ms-transform: translateX(0);
+  -webkit-transform: translateX(0);
+  transform: translateX(0);
+  visibility: visible; }
+
+.navigation .content-search-nav.show {
+  -moz-transform: translateX(0);
+  -o-transform: translateX(0);
+  -ms-transform: translateX(0);
+  -webkit-transform: translateX(0);
+  transform: translateX(0);
+  visibility: visible; }
+
+/* ANIM BTN */
+.animated-button {
+  position: relative;
+  -moz-transition: all 0.4s cubic-bezier(0.42, 0, 0.58, 1);
+  -o-transition: all 0.4s cubic-bezier(0.42, 0, 0.58, 1);
+  -webkit-transition: all 0.4s cubic-bezier(0.42, 0, 0.58, 1);
+  transition: all 0.4s cubic-bezier(0.42, 0, 0.58, 1); }
+  .animated-button:before {
+    display: block;
+    position: absolute;
+    top: 0px;
+    right: 0px;
+    height: 100%;
+    width: 0px;
+    z-index: -1;
     content: '';
-    display: inline-block;
-    width: 100%; }
-  .navigation .content-more-menu.show {
-    display: block; }
-  .navigation .content-more-menu nav:nth-child(1) {
-    width: 25%;
-    float: left;
-    padding-left: 40px; }
-  .navigation .content-more-menu nav:nth-child(2) {
-    width: 58.33333%;
-    float: left;
-    padding-left: 40px;
-    max-width: 665px; }
-  .navigation .content-more-menu .connect {
-    width: 16.66667%;
-    float: left; }
-    .navigation .content-more-menu .connect a {
-      display: block;
-      text-align: center;
+    color: white !important;
+    background: #222a30;
+    -moz-transition: all 0.4s cubic-bezier(0.42, 0, 0.58, 1);
+    -o-transition: all 0.4s cubic-bezier(0.42, 0, 0.58, 1);
+    -webkit-transition: all 0.4s cubic-bezier(0.42, 0, 0.58, 1);
+    transition: all 0.4s cubic-bezier(0.42, 0, 0.58, 1); }
+  .animated-button:hover {
+    color: white !important;
+    background-color: transparent; }
+    .animated-button:hover:before {
+      left: 0%;
+      right: auto;
+      width: 100%; }
+
+.link-network {
+  -moz-transition: all 0.3s ease-in-out;
+  -o-transition: all 0.3s ease-in-out;
+  -webkit-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out; }
+  .link-network .fa {
+    -moz-transition: all 0.3s ease-in-out;
+    -o-transition: all 0.3s ease-in-out;
+    -webkit-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out; }
+  .link-network:hover {
+    background-color: #fafafa;
+    color: #34414a !important; }
+    .link-network:hover .fa {
+      color: #34414a; }
+
+.navigation {
+  position: relative; }
+  .navigation .container-navigation {
+    width: 100%;
+    max-width: 1280px;
+    margin: auto;
+    background-color: #fafafa;
+    z-index: 60;
+    position: relative; }
+    .navigation .container-navigation .container-logo {
+      width: 25%;
+      float: left;
+      max-width: 260px;
+      height: 150px;
+      padding: 0 20px; }
+      .navigation .container-navigation .container-logo .archi-wiki-logo {
+        max-width: 198.9px;
+        width: 100%;
+        padding-top: 32px; }
+      .navigation .container-navigation .container-logo .legend-logo {
+        font-size: 12px;
+        color: rgba(70, 87, 99, 0.85); }
+    .navigation .container-navigation .container-header-nav {
+      width: 58.33333%;
+      float: left;
+      max-width: 714px;
+      height: 150px;
+      display: flex; }
+      .navigation .container-navigation .container-header-nav .header-nav {
+        margin: auto; }
+        .navigation .container-navigation .container-header-nav .header-nav .item {
+          display: inline-block;
+          padding: 0 15px; }
+          .navigation .container-navigation .container-header-nav .header-nav .item a {
+            color: #34414a;
+            text-transform: uppercase;
+            font-size: 18px; }
+    .navigation .container-navigation .search-nav {
+      width: 8.33333%;
+      float: left;
+      width: 133px;
+      height: 150px;
+      display: flex; }
+      .navigation .container-navigation .search-nav .fa-search {
+        margin: auto;
+        font-size: 34px; }
+      .navigation .container-navigation .search-nav.active {
+        background-color: #a65447; }
+        .navigation .container-navigation .search-nav.active .fa-search {
+          color: #fafafa; }
+    .navigation .container-navigation .more-menu {
+      width: 8.33333%;
+      float: left;
+      width: 133px;
+      height: 150px;
+      display: flex;
+      flex-direction: column; }
+      .navigation .container-navigation .more-menu .show-more-menu {
+        margin: auto;
+        margin-top: -20px;
+        font-size: 18px;
+        text-transform: uppercase; }
+      .navigation .container-navigation .more-menu.active {
+        background-color: #455763; }
+        .navigation .container-navigation .more-menu.active .show-more-menu {
+          color: #fafafa; }
+  .navigation .content-search-nav {
+    width: 100%;
+    text-align: justify !important;
+    text-justify: distribute-all-lines;
+    font-size: 0 !important;
+    max-width: 1280px;
+    margin: auto;
+    position: absolute;
+    top: 150px;
+    right: 0;
+    left: 0;
+    visibility: hidden;
+    transition: all 0.5s ease;
+    transform: translateY(-275px);
+    z-index: 50; }
+    .navigation .content-search-nav > * {
+      text-align: left;
+      font-size: 1rem; }
+    .navigation .content-search-nav:after {
+      content: '';
+      display: inline-block;
+      width: 100%; }
+    .navigation .content-search-nav.show {
+      display: block; }
+  .navigation .content-more-menu {
+    width: 100%;
+    text-align: justify !important;
+    text-justify: distribute-all-lines;
+    font-size: 0 !important;
+    max-width: 1280px;
+    margin: auto;
+    background-color: #455763;
+    color: #fafafa;
+    position: absolute;
+    top: 150px;
+    right: 0;
+    left: 0;
+    visibility: hidden;
+    transition: all 0.5s ease;
+    transform: translateY(-275px);
+    z-index: 50;
+    padding: 40px 0; }
+    .navigation .content-more-menu > * {
+      text-align: left;
+      font-size: 1rem; }
+    .navigation .content-more-menu:after {
+      content: '';
+      display: inline-block;
+      width: 100%; }
+    .navigation .content-more-menu.show {
+      display: block; }
+    .navigation .content-more-menu nav:nth-child(1) {
+      width: 25%;
+      float: left;
+      padding-left: 40px; }
+    .navigation .content-more-menu nav:nth-child(2) {
+      width: 58.33333%;
+      float: left;
+      padding-left: 40px;
+      max-width: 665px; }
+    .navigation .content-more-menu .connect {
+      width: 16.66667%;
+      float: left;
+      text-align: center; }
+      .navigation .content-more-menu .connect a {
+        display: block;
+        text-align: center;
+        color: #fafafa;
+        font-size: 18px;
+        padding-top: 10px; }
+      .navigation .content-more-menu .connect .fa-user {
+        border-radius: 50%;
+        border: 2px solid white;
+        width: 120px;
+        height: 120px;
+        color: #455763;
+        position: relative;
+        background-color: #ebebeb;
+        overflow: hidden; }
+        .navigation .content-more-menu .connect .fa-user:before {
+          position: absolute;
+          left: 0;
+          right: 0;
+          bottom: 0;
+          bottom: -12px;
+          font-size: 120px; }
+    .navigation .content-more-menu h4 {
+      font-size: 20px;
+      line-height: 1.3;
+      color: #fafafa; }
+    .navigation .content-more-menu .item a {
       color: #fafafa;
       font-size: 18px;
-      padding-top: 10px; }
-  .navigation .content-more-menu h4 {
-    font-size: 20px;
-    line-height: 1.3;
-    color: #fafafa; }
-  .navigation .content-more-menu .item a {
-    color: #fafafa;
-    font-size: 18px;
-    line-height: 1.5; }
-
-.navigation a {
-  text-decoration: none; }
+      line-height: 1.5; }
+  .navigation a {
+    text-decoration: none; }
 
 #page-footer {
   background-color: #34414a;
