--- a/scss/base/_reset.scss
+++ b/scss/base/_reset.scss
@@ -1,5 +1,6 @@
 body {
 	background-color: $white;
+	margin:0;
 }
 ul {
 	list-style: none;
@@ -8,6 +9,7 @@ ul {
 * {
 	font-size: 16px;
 	font-family: OpenSans;
+	outline:none;
 }
 
 h1, h2, h3, h4, h5 {
