--- a/scss/helpers/_mixins.scss
+++ b/scss/helpers/_mixins.scss
@@ -28,3 +28,10 @@
 	-webkit-transform: $transforms;
     transform: $transforms;
 }
+
+@mixin transition($transition...) {
+    -moz-transition:    $transition;
+    -o-transition:      $transition;
+    -webkit-transition: $transition;
+    transition:         $transition;
+}
