--- a/scss/main.scss
+++ b/scss/main.scss
@@ -30,6 +30,7 @@ $grid-max-width: 1280px;
 @import "components/input";
 @import "components/search-adress";
 @import "components/article";
+@import "components/animation";
 //====================== LAYOUT
 @import "layout/header";
 @import "layout/footer";
